@@ -1,5 +1,11 @@
 0.22.9	UNRELEASED
 
+ * Add support for pack index format version 3. This format supports variable
+   hash sizes to enable future SHA-256 support. The implementation includes
+   reading and writing v3 indexes with proper hash algorithm identification
+   (1 for SHA-1, 2 for SHA-256). Note that SHA-256 support itself is not yet
+   implemented and will raise NotImplementedError. (Jelmer Vernooĳ)
+
  * Fix ``LocalGitClient`` assertion error when fetching externally cloned repositories
    into ``MemoryRepo``. Previously, the client would fail with an AssertionError
    when trying to process pack data from repositories that were cloned externally.
